# spack_site_generator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: black.yml  tests.yml
examples/: alta.py  basic.py  casper.py  derecho.py
src/spack_site_generator/: __init__.py
src/spack_site_generator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/spack_site_generator/site/: __init__.py  abstract_site_config.py  compilers.py  config.py  modules.py  packages.py  site.py
src/spack_site_generator/utils/: __init__.py  autodict.py  spack_yaml.py
test/: test_autodict.py  test_compilers.py  test_config.py  test_modules.py  test_packages.py  test_site.py  test_spack_yaml.py
